Fixed alignment problem with the header bar

--- a/src/assets/scss/App.css
+++ b/src/assets/scss/App.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(45deg, #5b49ff 25%, #28f5e4);
+  background-color: white;
 }
 
 #page-content {
@@ -12,26 +12,46 @@
   margin-right: 15%;
 }
 
+.image, .image--right, .image--left {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.image--right {
+  float: right;
+}
+
+.image--left {
+  float: left;
+}
+
 .text-section {
   margin-bottom: 100px;
 }
 
 .left-text {
+  margin: 0px;
   position: relative;
   font-family: "Poppins", sans-serif;
   font-size: 22px;
   margin-top: 200px;
   margin-bottom: 50px;
+  clear: left;
   max-width: 30ch;
   word-wrap: 70px;
 }
 
-.title-text {
+.title-text, .title-text--white {
   position: relative;
   font-family: "Poppins", sans-serif;
   font-size: 72px;
   text-align: center;
   font-weight: 600;
+  color: black;
+}
+
+.title-text--white {
   color: white;
 }
 
@@ -41,7 +61,7 @@
   font-size: 40px;
   text-align: center;
   font-weight: 600;
-  color: white;
+  color: black;
 }
 
 .text, .description {
@@ -198,11 +218,10 @@
 }
 
 #header-bar {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 60px;
   background-color: white;
-  outline: 2px solid black;
   z-index: 1;
 }
 
@@ -213,52 +232,24 @@
   background-image: linear-gradient(45deg, #ffa9a9 20%, #ffe81c);
 }
 
-#join-now-button {
-  position: relative;
-  top: 20px;
-  margin: 20px;
-  font-family: 'Source Code Pro', monospace;
-  font-size: 14px;
-  letter-spacing: 1px;
-  color: #ffffff;
-  text-align: center;
-  border: solid 2px black;
-  background-color: black;
-  padding: 10px 30px;
-  border-radius: 100px;
-  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
-  transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
-}
-
-#join-now-button:hover {
-  background-color: #ffffff;
-  color: black;
-}
-
-#join-now-button:focus {
-  outline: none;
-}
-
 .header-button {
   position: relative;
   top: 20px;
-  margin: 20px;
-  font-family: 'Source Code Pro', monospace;
+  right: 30px;
+  z-index: 1;
+  float: right;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   letter-spacing: 1px;
   color: black;
   text-align: center;
-  border: solid 2px black;
-  background-color: white;
   padding: 10px 30px;
-  border-radius: 100px;
-  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
-  transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .header-button:hover {
-  background-color: black;
-  color: white;
+  color: #7a7a7a;
 }
 
 .header-button:focus {
