--- a/src/assets/scss/_header-footer.scss
+++ b/src/assets/scss/_header-footer.scss
@@ -1,11 +1,10 @@
 #header-bar {
-    position: relative;
+    position: absolute;
 
     width: 100%;
     height: 60px;
 
     background-color: white;
-    outline: 2px solid black;
 
     z-index: 1;
 }
@@ -19,64 +18,30 @@
     background-image: linear-gradient(45deg, #ffa9a9 20%, #ffe81c);
 }
 
-#join-now-button {
-    position: relative;
-    top: 20px;
-
-    margin: 20px;
-
-    font-family: 'Source Code Pro', monospace;
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: #ffffff;
-    text-align: center;
-
-    border: solid 2px black;
-    background-color: black;
-    padding: 10px 30px;
-    border-radius: 100px;
-
-    -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s,
-        border-width 0.3s, border-color 0.3s;
-    transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s,
-        border-color 0.3s;
-}
-
-#join-now-button:hover {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-}
-
-#join-now-button:focus {
-    outline: none;
-}
-
 .header-button {
     position: relative;
+
     top: 20px;
+    right: 30px;
 
-    margin: 20px;
+    z-index: 1;
 
-    font-family: 'Source Code Pro', monospace;
+    float: right;
+
+    font-family: $standard-font;
     font-size: 14px;
     letter-spacing: 1px;
     color: black;
     text-align: center;
 
-    border: solid 2px black;
-    background-color: white;
     padding: 10px 30px;
-    border-radius: 100px;
 
-    -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s,
-        border-width 0.3s, border-color 0.3s;
-    transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s,
-        border-color 0.3s;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
 }
 
 .header-button:hover {
-    background-color: black;
-    color: white;
+    color: rgb(122, 122, 122);
 }
 
 .header-button:focus {
